config/cicd-slack/01a-webhook-to-slack-pipeline-environment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    app.openshift.io/vcs-uri: https://github.ibm.com/cloudpakbringup/gitops.git?ref=main
  creationTimestamp: null
  name: webhook-to-slack-pipeline
