config/cicd-slack/07-route-gitops-webhook-event-listener-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitops-webhook-event-listener-route
  namespace: webhook-to-slack-pipeline
spec:
  host: ""
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-webhook-to-slack-pipeline-event-listener
    weight: 100
  wildcardPolicy: None
